update: update packages and docker-compose file

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DEBUG=False
-SECRET_KEY=VotreSecretKeyUltraLong
-ALLOWED_HOSTS=*
-DATABASE_URL=mysql://tpuser:TpP@ss123@db:3306/gestion_financiere
+DB_NAME=gestion_financiere
+DB_USER=tpuser
+DB_PASSWORD=TpP@ss123
+DB_ROOT_PASSWORD=rootpass
+DB_HOST=db
+DB_PORT=3306
